--- a/task-08.html
+++ b/task-08.html
@@ -7,13 +7,22 @@
     <title>Задание 8</title>
     <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
         line-height: 1.5;
+      }
+      .boxes__div {
+        margin: 10px;
+        width: 30px;
+        height: 30px;
+      }
+      .boxes__div-first {
+        width: 30px;
+        height: 30px;
       }
     </style>
   </head>
-  <body> 
+  <body>
     <p><a href="index.html">На главную</a></p>
 
     <div id="controls">
