--- a/task-05.html
+++ b/task-05.html
@@ -7,13 +7,13 @@
     <title>Задание 5</title>
     <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+          'Helvetica Neue', sans-serif;
         background-color: #fff;
         color: #424242;
         line-height: 1.5;
       }
-    </style> 
+    </style>
   </head>
   <body>
     <p><a href="index.html">На главную</a></p>
