--- a/task-06.html
+++ b/task-06.html
@@ -7,8 +7,8 @@
     <title>Задание 6</title>
     <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+          'Helvetica Neue', sans-serif;
         background-color: #fff;
         color: #424242;
         line-height: 1.5;
@@ -23,19 +23,14 @@
       }
 
       #validation-input.invalid {
-        border-color: #f44336; 
+        border-color: #f44336;
       }
     </style>
   </head>
   <body>
     <p><a href="index.html">На главную</a></p>
 
-    <input
-      type="text"
-      id="validation-input"
-      data-length="6"
-      placeholder="Введи 6 символов"
-    />
+    <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
 
     <script src="js/task-06.js" type="module"></script>
   </body>
